force-app/main/default/src/objects/HealthCloudGA__FilterColumn__c/fields/HealthCloudGA__FieldApi__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FieldApi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Api</label>
    <length>100</length>
    <type>Text</type>
</CustomField>