force-app/main/default/src/objects/HealthCloudGA__FilterColumn__c/fields/HealthCloudGA__FilterCriterion__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FilterCriterion__c</fullName>
    <label>Filter Criterion</label>
    <referenceTo>HealthCloudGA__FilterCriterion__c</referenceTo>
    <relationshipLabel>Filter Columns</relationshipLabel>
    <relationshipName>FilterColumns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>