force-app/main/default/src/objects/HealthCloudGA__FilterColumn__c/fields/HealthCloudGA__Order__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>